# orgphoto

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TEST_RESULTS.md  TODO  main.py  op.py  op.spec  pyinstallerconfig.json  pyproject.toml  requirements.md  run_tests.py  test_integration.py  test_op.py  test_simple.py  test_v210.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: build.yml
doc/: demo.tape
docs/: building.md  duplicate-handling.md  file-formats.md  installation.md  master-selection.md  performance.md  usage-examples.md  usage.md
op/: main.py  op.py  op.spec  photocopy.py  pyinstallerconfig.json
testing/target_test/2025_08_29/: 20231205_000437026_iOS.heic
