[project]
name = "op"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exifread>=3.0.0",
    "hachoir>=3.3.0",
    "ruff>=0.14.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
    "pytest>=9.0.2",
    "ruff>=0.14.0",
]
